# Coinfair-Solana-Backend

./: .env  .gitignore  BUILD_OPTIMIZATION_REPORT.md  Cargo.toml  Cargo_test.toml  GITHUB_ACTIONS_TEST_FIX_REPORT.md  MONGODB_AGGREGATION_PITFALLS.md  Makefile  README.md  Recover.md  config.env  debug-ssh-connection.sh  docker-compose.yaml  error.txt  reponse.json  rustfmt.toml  start_dev.bat  start_dev.sh  start_prod.bat  start_prod.sh  test-ci-local.sh  test-database-local.sh  test-ssh-connection.sh  test_pool.rs  validate-github-actions.sh
crates/chains/solana/: Cargo.toml  README.md  env.example
crates/chains/solana/src/: config.rs  lib.rs  mint_service.rs
crates/coinfair/: Cargo.toml
crates/coinfair/src/: main.rs
crates/hope/: Cargo.toml
crates/hope/src/: main.rs  solana_service.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: monitor.rs  util.rs
crates/server/: .env  Cargo.toml
crates/server/src/: app.rs  docs.rs  lib.rs  middleware.rs  router.rs
crates/server/src/api/: auth_controller.rs  dev_auth_controller.rs  mod.rs  permission_management_controller.rs  refer_controller.rs  reward_controller.rs  solana_controller.rs  solana_controller_deprecated.rs  static_controller.rs  user_controller.rs
crates/server/src/api/auth/: dev_auth_controller.rs  mod.rs
crates/server/src/api/solana/: clmm_config_controller.rs  clmm_pool_create.rs  clmm_pool_create_controller.rs  clmm_pool_query.rs  clmm_pool_query_controller.rs  cpmm_pool_create.rs  cpmm_pool_create_controller.rs  deposit_event_controller.rs  event_controller.rs  event_controller_tests.rs  launch_event_controller.rs  launch_migration_controller.rs  launch_migration_controller_tests.rs  liquidity_line_controller.rs  mod.rs  nft_controller.rs  position_controller.rs  referral_controller.rs  static_config_controller.rs  swap_controller.rs  swap_v2_controller.rs  swap_v3_controller.rs  token_controller.rs
crates/server/src/api/user/: user_controller.rs
crates/server/src/auth/: hot_reload_tests.rs  integration_tests.rs  jwt.rs  middleware.rs  mod.rs  models.rs  permissions.rs  rate_limit.rs  solana_auth.rs  solana_permission_service_tests.rs  solana_permissions.rs  tests.rs
crates/server/src/dtos/: mod.rs  refer_dto.rs  reward_dto.rs  solana_dto.rs  static_dto.rs  user_dto.rs
crates/server/src/dtos/solana/: common.rs  mod.rs
crates/server/src/dtos/statics/: mod.rs  static_dto.rs
crates/server/src/dtos/user/: mod.rs
crates/server/src/services/: config_fix_verification_tests.rs  data_transform.rs  data_transform_optimization_tests.rs  metaplex_service.rs  mod.rs  refer_service.rs  reward_service.rs  solana_permission_service.rs  solana_service.rs  solana_service_deprecated.rs  user_service.rs
crates/server/src/services/docs/: docs.rs
crates/server/src/services/position_storage/: mod.rs
crates/server/src/services/solana/: mod.rs  service.rs
crates/server/src/services/user/: mod.rs
crates/server/tests/: deposit_event_integration_tests.rs
crates/solana/: Cargo.toml
crates/solana-event-listener/: Cargo.toml
crates/solana-event-listener/src/: error.rs  lib.rs  main.rs
crates/solana-event-listener/src/config/: mod.rs  settings.rs
crates/solana-event-listener/src/metrics/: collector.rs  mod.rs
crates/solana-event-listener/src/parser/: cpmm_init_pool_parser.rs  cpmm_lp_change_parser.rs  deposit_event_parser.rs  discriminator.rs  discriminator_deprecated.rs  event_parser.rs  launch_event_parser.rs  mod.rs  nft_claim_parser.rs  pool_creation_parser.rs  reward_distribution_parser.rs  swap_parser.rs  token_creation_parser.rs
crates/solana-event-listener/src/persistence/: batch_writer.rs  event_storage.rs  mod.rs
crates/solana-event-listener/src/recovery/: backfill_handler.rs  backfill_manager.rs  backfill_task_context.rs  checkpoint.rs  checkpoint_persistence.rs  mod.rs  retry_manager.rs  scan_record_persistence.rs
crates/solana-event-listener/src/services/: migration_client.rs  mod.rs
crates/solana-event-listener/src/subscriber/: backfill_handler.rs  backfill_manager.rs  backfill_task_context.rs  event_filter.rs  mod.rs  subscription_manager.rs  websocket_manager.rs
crates/solana-event-listener/src/tests/: core_validation_test.rs  e2e_tests.rs  full_e2e_test.rs  integration_tests.rs  metadata_integration_test.rs  mod.rs  simple_e2e_test.rs
crates/solana/amm/: Cargo.toml
crates/solana/amm/src/: error.rs  lib.rs
crates/solana/amm/src/instructions/: collect_remaining_rewards.rs  create_pool.rs  (+9 more)
crates/solana/client/: Cargo.toml
crates/solana/client/src/: lib.rs  main.rs
crates/solana/clmm/: Cargo.toml
crates/solana/clmm-client/: Cargo.toml  client_config.ini
crates/solana/clmm-client/src/: lib.rs  main.rs
crates/solana/clmm/src/: error.rs  lib.rs
crates/solana/cp-swap/: Cargo.toml
crates/solana/cpmm/: Cargo.toml
crates/solana/cpmm-client/: Cargo.toml
crates/solana/cpmm-client/src/: lib.rs  main.rs
crates/solana/cpmm/src/: error.rs  lib.rs
crates/solana/referral/: Cargo.toml
crates/solana/referral/src/: constants.rs  error.rs  lib.rs  utils.rs
crates/solana/src/: client.rs  config.rs  examples.rs  lib.rs  precise_swap.rs  raydium.rs  raydium_api.rs  swap.rs  swap_v2_builder.rs  swap_v2_service.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: lib.rs  types.rs  utils.rs
crates/telegram/src/hope/: handler.rs  keyboard.rs  message.rs  mod.rs
crates/telegram/src/idle/: command.rs  handler.rs  keyboard.rs  message.rs  mod.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  errors.rs  lib.rs  logger.rs  metadata.rs  metaplex_service.rs
crates/utils/src/solana/: account_loader.rs  builders.rs  calculators.rs  config.rs  constants.rs  discriminator_tests.rs  managers.rs  mod.rs  pool_instruction_builder.rs  position_instruction_builder.rs  position_utils.rs  position_utils_benchmark.rs  position_utils_optimized.rs  raydium_api.rs  response.rs  service_helpers.rs  solana_client.rs  swap_calculator.rs  swap_services.rs  test_discriminator_consistency.rs  utils.rs  verify_discriminators.rs
crates/utils/tests/: test_ata_calc.rs
(+401 files in other folders)
