[workspace]
members = ["crates/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
axum = { version = "0.7.3", features = ["macros"] }
clap = { version = "4.4.13", features = ["env", "derive"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
mongodb = { version = "2.8.0" }
pbkdf2 = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
time = "0.3.31"
thiserror = "1.0.56"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14" }
tower = { version = "0.4.13", features = ["timeout", "buffer", "limit"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = { version = "0.1.40" }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.16.1", features = ["derive"] }
num-traits = { version = "0.2.19" }
rust_decimal = { version = "1.32", features = ["serde"] }
# bincode = { version = "1.3.3", features = ["serde"] }

# Solana相关依赖
solana-sdk = "2.1"
solana-client = "2.1"
anchor-lang = "0.31.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
      "no-entrypoint",
] }
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = [
      "no-entrypoint",
      "client",
] }
# Note: Raydium V2 AMM program ID will be used directly without external dependency
# as we'll be calling the program instructions directly using Solana SDK
base64 = "0.21"
bincode = "1.3.3"
borsh = "1.3"
