[package]
name = "hope"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hope" # placeholder
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.1", features = ["cookie"] }
clap = { workspace = true }
dotenvy = { workspace = true }
lazy_static = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pbkdf2 = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utils = { path = "../utils" }
validator = { workspace = true }

database = { path = "../database/" }
server = { path = "../server/" }
solana = { path = "../solana/" }
monitor = { path = "../monitor/" }  # 恢复monitor依赖，测试patch是否解决冲突
# timer = { path = "../timer/" }  # 已移除，因为不使用timer服务
# telegram = { path = "../telegram/" }  # 已移除，因为不使用telegram服务
