[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.8", features = ["full"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
futures = "0.3.31"
colored = "3.0.0"
eyre = "0.6.12"
chrono = "0.4.39"
reqwest = { version = "0.11", features = ["json"] }
serde.workspace = true
tracing = { workspace = true } 

server = { path = "../server" }
database =  { path = "../database" }
