[package]
name = "server" # placeholder
version = "0.1.0"
edition = "2021"
metadata.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.1", features = ["cookie"] }
clap = { workspace = true }
database = { path = "../database" }
dotenvy = { workspace = true }
lazy_static = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pbkdf2 = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utils = { path = "../utils" }
validator = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
alloy = { version = "0.8", features = ["full"] }
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }
# Solana dependencies for swap functionality
solana-sdk = "1.16"
solana-client = "1.16"
anchor-client = "0.28"
anchor-lang = "0.28"
spl-token = "3.5"
spl-token-2022 = "0.9"
spl-associated-token-account = "1.1"
arrayref = "0.3"
bincode = "1.3"
bs58 = "0.5"
configparser = "3.0"
mpl-token-metadata = "1.13"
# monitor = { path = "../monitor/" }

# For dev-dependencies, there is no need to config agiain.
# [dev-dependencies]
# mockito = { workspace = true }
# axum-test = "14.8.0"
