[package]
name = "server"   # placeholder
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.1", features = ["cookie"] }
clap = { workspace = true }
database = { path = "../database" }
dotenvy = { workspace = true }
lazy_static = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pbkdf2 = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utils = { path = "../utils" }
validator = { workspace = true }
bincode = { version = "1.3.3" }
solana = { path = "../solana" }
chrono = { version = "0.4.38", features = ["serde"] }
ethers = { version = "2.0.14", features = ["ws"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
base64 = "0.21"
borsh = "1.3"
solana-client = "2.1"
solana-sdk = "2.1"
solana-account-decoder = "2.1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"

# 添加缺失的依赖项用于SwapV2实现
anchor-lang = "0.31.0"
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = [
      "no-entrypoint",
      "client",
] }
raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", features = [
      "no-entrypoint",
      "client",
] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-memo = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = { version = "0.6.0" }
spl-pod = { version = "0.5.0" }
spl-associated-token-account = { version = "6.0.0", features = [
      "no-entrypoint",
] }

# monitor = { path = "../monitor/" }

# For dev-dependencies, there is no need to config agiain.
# [dev-dependencies]
# mockito = { workspace = true }
# axum-test = "14.8.0"
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }
num-traits = { workspace = true }
