[package]
name = "server"   # placeholder
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.1", features = ["cookie"] }
clap = { workspace = true }
database = { path = "../database" }
dotenvy = { workspace = true }
lazy_static = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pbkdf2 = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utils = { path = "../utils" }
validator = { workspace = true }
bincode = { version = "1.3.3" }
chrono = { version = "0.4.38", features = ["serde"] }
ethers = { version = "2.0.14", features = ["ws"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
base64 = "0.21"
borsh = "1.3"
bytemuck = { version = "1.23.0", features = ["derive"] }
solana-client = "2.1"
arrayref = "0.3.7"
solana-sdk = "2.1"
solana-account-decoder = "2.1"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
hex = "0.4"

# 添加缺失的依赖项用于SwapV2实现
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
raydium-amm-v3 = { path = "../solana/amm", package = "coinfair-raydium-amm-v3", features = [
      "no-entrypoint",
      "client",
] }
raydium-amm-v3-client = { path = "../solana/clmm-client", package = "clmm-client" }
raydium-cp-swap = { path = "../solana/cpmm", package = "raydium-cp-swap", features = [
      "no-entrypoint",
      "client",
] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-memo = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = { version = "0.6.0" }
spl-pod = { version = "0.5.0" }
spl-associated-token-account = { version = "6.0.0", features = [
      "no-entrypoint",
] }

# 认证和安全相关依赖
jsonwebtoken = "9.2"
redis = { version = "0.32", features = ["tokio-comp"] }
governor = "0.10"
ed25519-dalek = "2.1"
bs58 = "0.5"
rand = "0.8"

utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }
num-traits = { workspace = true }
urlencoding = "2.1"
# For dev-dependencies, there is no need to config agiain.
[dev-dependencies]
tokio-test = "0.4"
tower-test = "0.4"
axum-test = "14.8.0"
