[package]
name = "solana-event-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
mongodb = { workspace = true }

# Solana dependencies
solana-sdk = { workspace = true }
solana-client = { workspace = true }
anchor-lang = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }

# Additional dependencies for event listening
futures = "0.3"
dashmap = "6.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
backoff = { version = "0.4", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sysinfo = "0.30"  # 系统资源监控
dotenvy = "0.15"  # 环境配置文件加载

# Internal workspace dependencies
database = { path = "../database" }
utils = { path = "../utils" }

[[bin]]
name = "solana-event-listener"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"