[package]
name = "solana-event-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
mongodb = { workspace = true }

# Solana dependencies
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-program-pack = "2.1"
anchor-lang = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
raydium-amm-v3 = { path = "../solana/amm", package = "coinfair-raydium-amm-v3", features = ["no-entrypoint", "client"] }

# Additional dependencies for event listening
futures = "0.3"
dashmap = "6.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
backoff = { version = "0.4", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sysinfo = "0.30"  # 系统资源监控
dotenvy = "0.15"  # 环境配置文件加载
reqwest = { version = "0.11", features = ["json"] }  # HTTP 客户端
sha2 = "0.10"  # SHA-256 哈希计算

# Internal workspace dependencies
database = { path = "../database" }
utils = { path = "../utils" }

[[bin]]
name = "solana-event-listener"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"