[package]
name = "utils"
version = "0.1.0"
edition = "2021"
metadata.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
jsonwebtoken = "9.2.0"
mongodb = { workspace = true }
rust-argon2 = "2.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }

# Solana相关依赖
solana-sdk = { workspace = true }
solana-client = { workspace = true }
anchor-lang = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
raydium-amm-v3 = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
dotenvy = { workspace = true }
