[package]
name = "solana-mint-service"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18.26"
solana-sdk = "1.18.26"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
base64 = "0.21"
bs58 = "0.5"

[[example]]
name = "simple_mint"
path = "examples/simple_mint.rs" 