[package]
name = "coinfair-raydium-amm-v3"
version = "0.1.0"
description = "Anchor client and source for CoinFair concentrated liquidity AMM"
edition = "2021"
keywords = ["solana", "anchor", "coinfair"]

[lib]
crate-type = ["cdylib", "lib"]
name = "coinfair_raydium_amm_v3" # 使用唯一名称
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["localnet"]
client = []
no-log-ix-name = []
init_if_needed = []
enable-log = []
devnet = []
localnet = []
paramset = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
spl-memo = "6.0.0"
uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }
mpl-token-metadata = { version = "5.1.0" }
spl-token-metadata-interface = { version = "0.6.0" }
bytemuck = { version = "1.19.0", features = ["derive", "min_const_generics"] }
arrayref = { version = "0.3.6" }
solana-security-txt = "1.1.1"
referral = { path = "../referral", package = "coinfair-referral", features = [
      "no-entrypoint",
      "cpi",
] }

[dev-dependencies]
quickcheck = "0.9"
proptest = "1.0"
rand = "0.8.5"

# [profile.release]
# lto = "fat"
# codegen-units = 1
# panic = "abort"
# overflow-checks = true
# [profile.release.build-override]
# opt-level = 3
# incremental = false
# codegen-units = 1
# Inherit workspace lints
[lints]
workspace = true
