[package]
name = "coinfair-raydium-cp-swap"  # 改为唯一的package名称
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "coinfair_raydium_cp_swap"  # 使用唯一名称

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
devnet = []
client = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-math = { version = "0.3", features = ["no-entrypoint"] }
spl-memo = "6.0.0"
uint = "0.9.1"
solana-security-txt = "1.1.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
arrayref = { version = "0.3.6" }

[dev-dependencies]
#quickcheck = "0.9"
proptest = "1.0"
#rand = "0.8.5"

# Inherit workspace lints
[lints]
workspace = true
