[package]
name = "raydium-cp-swap"
version = "0.2.0"
description = "Coinfair constant product AMM, supports Token2022 and without Openbook"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cp_swap"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
devnet = []
client = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
referral = { path = "../referral", package = "coinfair-referral", features = [
      "cpi",
] }
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.31.1", features = ["memo", "metadata"] }
spl-math = { version = "0.3", features = ["no-entrypoint"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
# uint = "0.10.0"
uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }
solana-security-txt = "1.1.1"
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
arrayref = { version = "0.3.6" }

[dev-dependencies]
quickcheck = "1.0.3"
proptest = "1.0"
rand = "0.9.0"

[lints]
workspace = true
