[package]
name = "referral"
version = "0.1.0"
edition = "2021"

[lib]
name = "referral"
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
# stevekeol
default = ["localnet"]
client = []
no-log-ix-name = []
init_if_needed = []
enable-log = []
devnet = []
# stevekeol
localnet = []
paramset = []

# stevekeol
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# Inherit workspace lints
[lints]
workspace = true
